All fixes and features from AmazeLauncher